# AI_Tool_Nest_API

./: .env-example  .gitignore  LICENSE  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 20250421_0458_8a0ed50c8481_initial_migration.py
app/: __init__.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: __init__.py  api_keys.py  auth.py
app/api/v1/endpoints/ai_tools/: __init__.py  image_to_text.py  text_paraphraser.py  text_summarizer.py  utils.py
app/core/: auth.py  config.py  database.py  logging_config.py  rate_limit.py  security.py  templates.py
app/models/: __init__.py  api_key.py  api_key_usage.py  base.py  user.py
app/schemas/: api_key.py  auth.py  image_to_text.py  text_paraphraser.py  text_summarizer.py
app/services/: api_key_service.py  image_to_text.py  text_paraphraser.py  text_summarizer.py
app/static/css/: tailwind.css
app/templates/: base.html
app/templates/components/: code-block.html
app/templates/pages/: home.html
app/web/: __init__.py  docs.py
docs/: api_examples.md  architecture.md  database_migrations.md  technical.md
